--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
