--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,19 @@ jobs:
           
       - name: Install dependencies
         run: npm ci
-        
+
+      - name: Dump github context
+        run:   echo "$GITHUB_CONTEXT"
+        shell: bash
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+      
       - name: Build
         run: npm run build
         env:
           REACT_APP_AZURE_AD_CLIENT_ID: ${{ secrets.REACT_APP_AZURE_AD_CLIENT_ID }}
           REACT_APP_AZURE_TENANT_ID: ${{ secrets.REACT_APP_AZURE_TENANT_ID }}
-          REACT_APP_HOSTNAME: https://${GITHUB_REPOSITORY_OWNER}.github.io/${GITHUB_REPOSITORY}
+          REACT_APP_HOSTNAME: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
         
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
